# cheatsheets

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
js/basic/: log.js
js/basic/html/: index.html  index.js
python/: arrays.py  comprehension.py  exceptions.py  generator.py
python/basic/string/: f-strings.py  interpolacao.py
python/json/: dado.json  main.py
python/modularization/: main.py
